test/asm/fixed-point-syntax.err
error: Invalid fixed-point constant, no significant digits after 'q'
    at fixed-point-syntax.asm(10)
error: Invalid fixed-point constant, no significant digits after 'q'
    at fixed-point-syntax.asm(11)
error: syntax error, unexpected symbol
    at fixed-point-syntax.asm(11)
error: syntax error, unexpected symbol
    at fixed-point-syntax.asm(12)
error: Invalid integer constant, trailing '_'
    at fixed-point-syntax.asm(13)
error: Invalid fixed-point constant, '_' after '.'
    at fixed-point-syntax.asm(14)
error: Invalid fixed-point constant, no significant digits after 'q'
    at fixed-point-syntax.asm(15)
Assembly aborted with 7 errors
